[tool.poetry]
name = "repl_python3_TomatoStreamlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
geopy = "^2.2.0"
pandas = "^1.3.3"
plotly = "^5.3.1"
streamlit = "^0.89.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
